--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-    <head><base href="/">
+    <head><base href="./vt-design/">
         <meta charset="utf-8" />
         <title>vt-design</title>
         <meta name="theme-color" content="#222127" />
@@ -10,7 +10,7 @@
 	if (!window['vt_design']) {
 		window['vt_design'] = {}
 	}
-	window['vt_design'].base = '/'</script><link href="main.8887cca2f09d73d9ba57.bundle.css" rel="stylesheet"></head>
+	window['vt_design'].base = './vt-design/'</script><link href="main.8887cca2f09d73d9ba57.bundle.css" rel="stylesheet"></head>
     <body>
         <div id="app"></div>
     <script type="text/javascript" src="main.658f6db23d9eb033b08e.bundle.js"></script></body>
